# demonstrator

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.gradle  deployment.json
org.inaetics.demonstrator.api/src/org/inaetics/demonstrator/api/: CMakeLists.txt  DataStore.java  Result.java  (+4 more)
org.inaetics.demonstrator.celix.implementation/: CMakeLists.txt  deploy.cmake
org.inaetics.demonstrator.celix.implementation/data_store/: CMakeLists.txt
org.inaetics.demonstrator.celix.implementation/data_store/private/include/: arraylist_data_store_impl.h  arraylist_data_store_statistics_impl.h
org.inaetics.demonstrator.celix.implementation/data_store/private/src/: activator.c  arraylist_data_store_impl.c  arraylist_data_store_statistics_impl.c
org.inaetics.demonstrator.celix.implementation/data_store_endpoint/: CMakeLists.txt
org.inaetics.demonstrator.celix.implementation/data_store_endpoint/private/include/: data_store_endpoint_impl.h
org.inaetics.demonstrator.celix.implementation/data_store_endpoint/private/src/: data_store_endpoint_activator.c  data_store_endpoint_impl.c
org.inaetics.demonstrator.celix.implementation/data_store_proxy/: CMakeLists.txt
org.inaetics.demonstrator.celix.implementation/data_store_proxy/private/include/: data_store_proxy_impl.h
org.inaetics.demonstrator.celix.implementation/data_store_proxy/private/src/: data_store_proxy_activator.c  data_store_proxy_impl.c
org.inaetics.demonstrator.celix.implementation/processor/: CMakeLists.txt
org.inaetics.demonstrator.celix.implementation/processor/private/include/: processor_impl.h
org.inaetics.demonstrator.celix.implementation/processor/private/src/: activator.c  processor_impl.c  processor_statistics_impl.c
org.inaetics.demonstrator.celix.implementation/producer/: CMakeLists.txt
org.inaetics.demonstrator.celix.implementation/producer/private/include/: producer_impl.h  producer_statistics_impl.h
org.inaetics.demonstrator.celix.implementation/producer/private/src/: activator.c  producer_impl.c  producer_statistics_impl.c
org.inaetics.demonstrator.celix.implementation/producer_endpoint/: CMakeLists.txt
org.inaetics.demonstrator.celix.implementation/producer_endpoint/private/include/: producer_endpoint_impl.h
org.inaetics.demonstrator.celix.implementation/producer_endpoint/private/src/: producer_endpoint_activator.c  producer_endpoint_impl.c
org.inaetics.demonstrator.celix.implementation/producer_proxy/: CMakeLists.txt
org.inaetics.demonstrator.celix.implementation/producer_proxy/private/include/: producer_proxy_impl.h
org.inaetics.demonstrator.celix.implementation/producer_proxy/private/src/: producer_proxy_activator.c  producer_proxy_impl.c
org.inaetics.demonstrator.celix.implementation/queue_endpoint/: CMakeLists.txt
org.inaetics.demonstrator.celix.implementation/queue_endpoint/private/include/: queue_endpoint_impl.h
org.inaetics.demonstrator.celix.implementation/queue_endpoint/private/src/: queue_endpoint_activator.c  queue_endpoint_impl.c
org.inaetics.demonstrator.celix.implementation/queue_proxy/: CMakeLists.txt
org.inaetics.demonstrator.celix.implementation/queue_proxy/private/include/: queue_proxy_impl.h
org.inaetics.demonstrator.celix.implementation/queue_proxy/private/src/: queue_proxy_activator.c  queue_proxy_impl.c
org.inaetics.demonstrator.celix.implementation/sample_queue/: CMakeLists.txt
org.inaetics.demonstrator.celix.implementation/sample_queue/private/include/: arraylist_queue_service_impl.h  arraylist_queue_service_statistics_impl.h  arraylist_sample_queue_impl.h
org.inaetics.demonstrator.celix.implementation/sample_queue/private/src/: activator.c  arraylist_queue_service_impl.c  arraylist_queue_service_statistics_impl.c  arraylist_sample_queue_impl.c
org.inaetics.demonstrator.celix.implementation/service_statistics_endpoint/: CMakeLists.txt
org.inaetics.demonstrator.celix.implementation/service_statistics_endpoint/private/include/: service_statistics_endpoint_impl.h
org.inaetics.demonstrator.celix.implementation/service_statistics_endpoint/private/src/: service_statistics_endpoint_activator.c  service_statistics_endpoint_impl.c
org.inaetics.demonstrator.celix.implementation/service_statistics_proxy/: CMakeLists.txt
org.inaetics.demonstrator.celix.implementation/service_statistics_proxy/private/include/: service_statistics_proxy_impl.h
org.inaetics.demonstrator.celix.implementation/service_statistics_proxy/private/src/: service_statistics_proxy_activator.c  service_statistics_proxy_impl.c
org.inaetics.demonstrator.celix.implementation/splice_queue/: CMakeLists.txt
org.inaetics.demonstrator.celix.implementation/splice_queue/opensplice/x86_64.linux/: release.com
org.inaetics.demonstrator.celix.implementation/splice_queue/private/include/: sample.h  sampleDcps.h  sampleSacDcps.h  sampleSplDcps.h  splice_data_queue.h  splice_sample_queue_impl.h
org.inaetics.demonstrator.celix.implementation/splice_queue/private/src/: activator.c  sampleSacDcps.c  sampleSplDcps.c  splice_data_queue.c  splice_sample_queue_impl.c
org.inaetics.demonstrator.celix.implementation/statistic_tracker/: CMakeLists.txt
org.inaetics.demonstrator.celix.implementation/statistic_tracker/private/include/: statistic_tracker_impl.h
org.inaetics.demonstrator.celix.implementation/statistic_tracker/private/src/: activator.c  statistic_tracker_impl.c
org.inaetics.demonstrator.celix.implementation/stats_provider_endpoint/: CMakeLists.txt
org.inaetics.demonstrator.celix.implementation/stats_provider_endpoint/private/include/: stats_provider_endpoint_impl.h
org.inaetics.demonstrator.celix.implementation/stats_provider_endpoint/private/src/: stats_provider_endpoint_activator.c  stats_provider_endpoint_impl.c
org.inaetics.demonstrator.celix.implementation/stats_provider_proxy/: CMakeLists.txt
org.inaetics.demonstrator.celix.implementation/stats_provider_proxy/private/include/: stats_provider_proxy_impl.h
org.inaetics.demonstrator.celix.implementation/stats_provider_proxy/private/src/: stats_provider_proxy_activator.c  stats_provider_proxy_impl.c
(+291 files in other folders)
