add_subdirectory(producer)
add_subdirectory(sample_queue)
add_subdirectory(queue_endpoint)
add_subdirectory(queue_proxy)
add_subdirectory(processor)
add_subdirectory(data_store)
add_subdirectory(data_store_endpoint)
add_subdirectory(data_store_proxy)
add_subdirectory(service_statistics_endpoint)
add_subdirectory(service_statistics_proxy)
add_subdirectory(statistic_tracker)
